--- a/package.json
+++ b/package.json
@@ -5,24 +5,26 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
+  },  
+  "build": {
+    "target": "nsis",
+    "appId": "com.electron.prm",
+    "copyright": "Copyright (c) 2022 Ntonde Edgar Isingoma.",
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "deb",
+      "maintainer": "Edgar Isingoma"
+    }
   },
   "author": "Ed-Isingoma",
   "license": "ISC",
   "devDependencies": {
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-deb": "^7.4.0",
-    "@electron-forge/maker-rpm": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
-    "@electron-forge/plugin-fuses": "^7.4.0",
-    "@electron/fuses": "^1.8.0",
-    "electron": "^30.1.0"
-  },
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron": "^30.1.0",
+    "electron-builder": "^24.13.3"
   }
 }
