--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
-  },  
+  },
   "build": {
     "target": "nsis",
     "appId": "com.electron.prm",
@@ -24,7 +24,9 @@
   "author": "Ed-Isingoma",
   "license": "ISC",
   "devDependencies": {
+    "@types/mysql": "^2.15.26",
     "electron": "^30.1.0",
-    "electron-builder": "^24.13.3"
+    "electron-builder": "^24.13.3",
+    "mysql": "^2.18.1"
   }
 }
