--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "@types/mysql": "^2.15.26",
     "electron": "^30.1.0",
     "electron-builder": "^24.13.3",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.10.1"
   }
 }
