GenerateRFQ and datetime field

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quid-pro-cure",
+  "name": "pms",
   "version": "1.0.0",
   "description": "Making your procurement deals smoothly.",
   "main": "main.js",
